# blas-rs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
assets/: katex-header.html  mathjax-header.html
examples/: mat_blas.rs
src/: blas_types.rs  lib.rs
src/cblas/: cblas_level_one.rs  cblas_level_three.rs  cblas_level_two.rs  cblas_types.rs  mod.rs
